[metadata]
name = dalec-gitlab
version = attr: dalec_gitlab.__version__
url = https://dev.webu.coop/w/i/dalec-gitlab
author = Webu
author_email = contact@webu.coop
description = Dalec plugin to retrieve gitlab issues or events
long_description = file: README.md
license = BSD-3-Clause
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://dev.webu.coop/w/i/dalec-gitlab
    Tracker = https://dev.webu.coop/w/i/dalec-gitlab/issues

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Django>=2.2
    dalec
    python-gitlab>=2.10,<2.11
